# WoWDBDefs

code/cxx/: CMakeLists.txt
code/cxx/include/: dbd_parser.hpp
code/cxx/src/: dbd_lexer.cpp  dbd_parser.cpp
